<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Falcon Calcultor</string>

	
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--nav menu-->
    <string name="nav_menu_one">Debit Info</string>
    <string name="nav_menu_two">貸款計算機</string>
    <string name="nav_menu_three">自訂紀錄</string>
    <string name="nav_menu_four">心水清單</string>
    <string name="nav_menu_five">設定</string>
    <string name="nav_menu_six">Version</string>
    <string name="nav_menu_seven">通知測試</string>


    <!--==============================================================================================-->
    <!--Fragment Calcultor-->
    <string name="cal_installment_title">每月供款</string>
    <string name="cal_totalinsterestt_title">總利息支出</string>
    <string name="cal_totalpayment_title">本利和支出</string>

    <string name="cal_loanamount_title">貸款金額</string>
    <string name="cal_loanamount_subtitle">以港元計算</string>

    <string name="cal_loantreams_title">攤分期數</string>
    <string name="cal_loantreams_subtitle">以月份計算</string>

    <string name="cal_loanrate_title">利率</string>
    <string name="cal_loanrate_subtitle">以實際年利率計算</string>

    <string name="cal_loanamount_pun">($)</string>
    <string name="cal_loantreams_pun">(Mths)</string>
    <string name="cal_loanrate_pun">(%)</string>

	<string name="schedule_btn_text">還款表</string>
	
	<string name="calcultor_toast_calfirst">請先計算供款</string>
	<string name="calcultor_toast_poorvalue">資料輸入不正確</string>
	
    <!--Fragment Calcultor dialog-->
    <string name="calcultor_loanamount_title">輸入貸款額</string>
    <string name="calcultor_loanamount_subtitle">由 $1 - $10,000,000</string>

    <string name="calcultor_loantrems_title">輸入期數</string>
    <string name="calcultor_loantrems_subtitle">由 3 - 90 期</string>

    <string name="calcultor_loanrate_title">輸入實際年利率</string>
    <string name="calcultor_loanrate_subtitle">由 1% - 60%</string>

    <string name="calcultor_dialog_PositiveButton">完成</string>
    <string name="calcultor_dialog_NegativeButton">取消</string>

	
	<string name="calcultor_dialog_toast_inputname">請先輸入名稱</string>

    <string name="calcultor_dialog_description_title"> 說明 </string>

    <string name="calcultor_dialog_description">

        1. 本程式以 「等額本息 (息除本減)」 還款方式計算, 所有其他費用及回贈並不納入計算範圍。
        \n\n
        2. 本程式計算所有結果及有關數據僅供作参考用途，不作為扣款依據。
        \n\n
        3. 若想紀錄 「等額本息 (息除本減)」 以外產品，請前往 "自訂紀錄 (暫未開放)" 。

    </string>

    <!--==============================================================================================-->
    <!--for Saver page-->
    <string name="loanname_hint">輸入名稱</string>
	
    <string name="loantype_hint">私人貸款</string>
	
	<string name="loantype_personal">私人貸款</string>
	<string name="loantype_mort">樓宇按揭</string>
	<string name="loantype_car">汽車貸款</string>
	
    <string name="applystatuse_hint">申請狀況</string>
	
    <string name="applytype_notyet">未申請</string>
	<string name="applytype_pending">申請中</string>
	<string name="applytype_approval">已成功批核</string>
	<string name="applytype_reject">不成功批核</string>
	<string name="applytype_cancel">取消申請</string>

    <string name="loannum_hint">貸款編號</string>
    <string name="firstdue_hint">首期供款日</string>
    <string name="finaldue_hint">最後供款日</string>
	
    <string name="alertdate_hint">設置提醒</string>
    <string name="alertdate_dontalert">不要提醒</string>
	<string name="alertdate_3day">設置當天前提醒</string>
	<string name="alertdate_5day">設置3天前提醒</string>
	<string name="alertdate_7day">設置5天前提醒</string>
	
	<string name="alerttime_hint">提醒時間</string>
	
    <string name="address_hint">地址</string>
    <string name="phoneNum_hint">電話</string>
    <string name="remark_hint">備註</string>

    <string name="Toast_String_insert">保存成功</string>
    <string name="Toast_String_update">更新成功</string>

    <string name="loamtype_dialog_title">貸款類別</string>
    <string name="applytype_dialog_title">申請狀況</string>
    <string name="alertdate_dialog_title">設置提醒</string>


    <!--Credit Profile-->
    <!--==============================================================================================-->

    <string name="hints_product_name">輸入名稱</string>

    <string name="title_product_type">產品類別</string>
    <string name="title_product_personal">私人貸款</string>
    <string name="title_product_mortgage">樓宇按揭</string>
    <string name="title_product_revolving">循環貸款</string>
    <string name="title_product_car">汽車貸款</string>
    <string name="title_product_card">信用卡類別</string>

    <string name="title_product_status">申請狀況</string>
    <string name="product_status_notapply">尚未申請</string>
    <string name="product_status_pending">申請中</string>
    <string name="product_status_approval">已成功批核</string>
    <string name="product_status_reject">不成功批核</string>
    <string name="product_status_cancel">取消申請</string>

    <string name="hints_loan_number">貸款編號</string>

    <string name="title_loan_amount">貸款銀碼</string>
    <string name="title_loan_rate">貸款利率</string>
    <string name="title_loan_revolvingrate">最低還款利率</string>
    <string name="title_loan_trems">還款期數</string>
    <string name="title_loan_installment">每月供款</string>

    <string name="title_first_due">首月供款日</string>
    <string name="title_final_due">最後還款日</string>

    <string name="title_setup_alarm">設置提醒</string>
    <string name="alarm_dontset">不要提醒</string>
    <string name="alarm_0_day">設置當天前提醒</string>
    <string name="alarm_3_day">設置3天前提醒</string>
    <string name="alarm_5_day">設置5天前提醒</string>

    <string name="title_setup_time">提醒時間</string>

    <string name="hints_address">地址</string>
    <string name="hints_phone">電話</string>
    <string name="hints_remarks">備註</string>
	
	
	<string name="dialog_duedate_normal">按所選日子</string>
	<string name="dialog_duedate_eom">每月最後一日</string>

    <string name="hints_dialog_loanammount">自定金額</string>
    <string name="hints_dialog_loanrate">自定利率</string>
    <string name="hints_dialog_loantrems">自定期數</string>
    <string name="hints_dialog_loaninstallment">自定供款金額</string>

    <string name="hints_enter_name">請先輸入名稱</string>





    <!--==============================================================================================-->
    <!--for Setting Page-->
    <string name="password_title">密碼</string>
    <string name="setup_password_title">設罝密碼</string>
    <string name="reset_password_title">重罝密碼</string>

    <string name="language_title">語言</string>

    <string name="language_eng_title">ENG</string>
    <string name="language_cht_title">繁體</string>

    <string name="decimal_point_title">不顯示小數點</string>

    <string name="decimal_point_0_title">不顯示小數點</string>
    <string name="decimal_point_2_title">顯示小數點後兩位</string>

    <string name="setting_hint_setupFirst">請先設置密碼</string>
    <string name="setting_hint_setupAlready">密碼已設置</string>


    <!--==============================================================================================-->
    <!--for Favoutite Page-->
	<string name="favourite_status_notapply">未申請</string>
	<string name="favourite_status_pending">申請中</string>
	<string name="favourite_status_approval">已成功批核</string>
	<string name="favourite_status_reject">不成功批核</string>
	<string name="favourite_status_cancel">取消申請</string>
	
	<string name="favourite_lastmodify">最後修改日期 : </string>

    <string name="favourite_month"> 個月供款期 </string>

    <!--==============================================================================================-->
    <!--for Password Gate-->
    <string name="password_hint_input"> 請輸入密碼 </string>
    <string name="password_hint_overlength"> 密碼長度不可大於十位 </string>

    <string name="password_hint_create"> 請再次輸入密碼 </string>
    <string name="password_hint_create_success"> 密碼設置成功 </string>

    <string name="password_hint_correct"> 輸入密碼正確 </string>
    <string name="password_hint_notcorrect"> 輸入密碼不正確，請從重輸入 </string>

    <string name="password_hint_resetfinish"> 密碼已清除 </string>

    <!--==============================================================================================-->
    <!--For Schedule Recycle View Item-->
    <string name="schedule_interest"> 利息 </string>
    <string name="schedule_principle"> 本金 </string>
    <string name="schedule_balance"> 結餘 </string>
    <string name="schedule_cumulative_interest"> 本期累計利息支出 </string>


</resources>

