<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/fragment_bg"
	app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
	android:minHeight="50dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_weight="1"
		android:id="@+id/installment_lineary">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:background="@color/colorPrimaryDark">

			<ImageView
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:clickable="true"
				android:focusable="true"
				android:id="@+id/addtofav_btn"
				android:src="@drawable/ic_add_black_24dp"
				android:layout_margin="15dp"
				android:tint="@color/TextColor_TiffanyBule"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="$"
					android:id="@+id/textView2"
					android:textColor="#FFFFFF"
					android:textSize="50sp"
					android:layout_marginRight="15dp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="0.00"
					android:id="@+id/installment_tv"
					android:textColor="#FFFFFF"
					android:textSize="50sp"/>

			</LinearLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/cal_installment_title"
				android:id="@+id/textView7"
				android:textColor="#FFFFFF"
				android:textSize="30sp"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="5dp">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:padding="5dp">

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="$"
						android:id="@+id/textView5"
						android:textColor="#FFFFFF"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="0.00"
						android:id="@+id/total_interest_tv"
						android:textColor="#FFFFFF"/>

				</LinearLayout>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_totalinsterestt_title"
					android:id="@+id/textView9"
					android:textColor="#FFFFFF"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:padding="5dp">

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="$"
						android:id="@+id/textView17"
						android:textColor="#FFFFFF"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="0.00"
						android:id="@+id/total_payment_tv"
						android:textColor="#FFFFFF"/>

				</LinearLayout>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_totalpayment_title"
					android:id="@+id/textView11"
					android:textColor="#FFFFFF"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:visibility="gone">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/imageView7"
			android:src="@drawable/ic_alarm_black_24dp"
			android:layout_margin="10dp"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/imageView8"
			android:src="@drawable/ic_equalizer_black_24dp"
			android:layout_margin="10dp"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/imageView9"
			android:src="@drawable/ic_favorite_black_24dp"
			android:layout_margin="10dp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/colorPrimaryDark"
		android:padding="0dp">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:clickable="true"
			android:focusable="true"
			android:id="@+id/loanAmount_linear"
			android:padding="20dp"
			android:gravity="center">

			<ImageView
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:id="@+id/imageView11"
				android:src="@drawable/ic_data_usage_black_24dp"
				android:layout_marginRight="30dp"
				android:tint="@color/TextColor_TiffanyBule" />

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loanamount_title"
					android:id="@+id/textView12"
					android:textColor="#FFFFFF"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loanamount_subtitle"
					android:id="@+id/textView13"
					android:textColor="#FFFFFF"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="bottom">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="0.00"
					android:id="@+id/loanAmount_tv"
					android:textColor="#FFFFFF"
					android:paddingLeft="10dp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loanamount_pun"
					android:id="@+id/textView22"
					android:textColor="#FFFFFF"
					android:paddingLeft="10dp"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:clickable="true"
			android:focusable="true"
			android:id="@+id/loanTrems_linear"
			android:padding="20dp">

			<ImageView
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:id="@+id/imageView12"
				android:src="@drawable/ic_data_usage_black_24dp"
				android:layout_marginRight="30dp"
				android:tint="@color/TextColor_TiffanyBule" />

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loantreams_title"
					android:id="@+id/textView15"
					android:textColor="#FFFFFF"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loantreams_subtitle"
					android:id="@+id/textView16"
					android:textColor="#FFFFFF"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="bottom">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="12"
					android:id="@+id/loanTrems_tv"
					android:textColor="#FFFFFF"
					android:paddingLeft="10dp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loantreams_pun"
					android:id="@+id/textView23"
					android:textColor="#FFFFFF"
					android:paddingLeft="10dp"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:clickable="true"
			android:focusable="true"
			android:id="@+id/loanRate_linear"
			android:padding="20dp">

			<ImageView
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:id="@+id/imageView13"
				android:src="@drawable/ic_data_usage_black_24dp"
				android:layout_marginRight="30dp"
				android:tint="@color/TextColor_TiffanyBule" />

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loanrate_title"
					android:id="@+id/textView18"
					android:textColor="#FFFFFF"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loanrate_subtitle"
					android:id="@+id/textView19"
					android:textColor="#FFFFFF"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="bottom">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="54.00"
					android:id="@+id/loanRate_tv"
					android:textColor="#FFFFFF"
					android:paddingLeft="10dp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/cal_loanrate_pun"
					android:id="@+id/textView24"
					android:textColor="#FFFFFF"
					android:paddingLeft="10dp"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:orientation="horizontal"
		android:background="@color/colorPrimaryDark">

		<LinearLayout
			android:id="@+id/schedule_btn"
			android:transitionName="sechedule_animation"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:clickable="true"
			android:background="@color/colorPrimaryDark"
			android:gravity="center"
			android:paddingTop="10dp"
			android:paddingBottom="0dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/schedule_btn_text"
				android:id="@+id/textView21"
				android:paddingTop="5dp"
				android:textColor="#FFFFFF"/>

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/imageView3"
				android:src="@drawable/ic_falcon_white"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

